--- a/package.json
+++ b/package.json
@@ -21,29 +21,17 @@
     "node": ">=16.0.0"
   },
   "exports": {
-    ".": {
-      "import": "./src/index.mjs",
-      "require": "./src/index.js"
-    }
+    "./src/index.js"
   },
   "scripts": {
-    "lint": "eslint .",
-    "start:js": "node src/index.js",
-    "start:mjs": "node src/index.mjs",
-    "test:js": "node src/test.js",
-    "test:mjs": "node src/test.mjs",
-    "start": "npm run start:js && npm run start:mjs",
-    "test": "npm run test:js && npm run test:mjs",
-    "build": "echo \"Building project...\""
+    "start": "node src/index.js",
+    "test": "node src/test.js"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
     "node-fetch": "^2.6.1",
     "request": "^2.88.2"
-  },
-  "devDependencies": {
-    "eslint": "^9.17.0"
   },
   "bugs": {
     "url": "https://github.com/GlobalTechInfo/Test/issues"
