--- a/package.json
+++ b/package.json
@@ -20,27 +20,16 @@
   "engines": {
     "node": ">=16.0.0"
   },
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "exports": {
     ".": {
-      "import": "lib/index.js",
+      "import": "src/index.js",
       "require": "src/index.js"
     },
-    "./modules": {
-      "import": "lib/modules.js",
-      "require": "src/modules.js"
-    },
-    "./test": {
-      "import": "lib/test.js",
-      "require": "src/test.js"
-    }
-  },
   "type": "module",
   "scripts": {
-    "start:mjs": "node lib/index.js",
-    "start:cjs": "node src/index.js",
-    "test:mjs": "node lib/test.js",
-    "test:cjs": "node src/test.js"
+    "start": "node src/index.js",
+    "test": "node src/test.js"
   },
   "dependencies": {
     "axios": "^1.7.2",
