--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
-    "node-fetch": "^2.7.0",
-    "request": "^2.88.2"
+    "node-fetch": "^2.7.0"
   },
   "bugs": {
     "url": "https://github.com/GlobalTechInfo/Test/issues"
